--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "copy-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.3",
     "eslint": "^7.22.0",
+    "gulp": "^4.0.2",
+    "gulp-string-replace": "^1.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^2.9.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
@@ -34,8 +37,6 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.26.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "gulp": "^4.0.2",
-    "gulp-string-replace": "^1.1.2"
+    "webpack-dev-server": "^3.11.2"
   }
 }
